test/ill-formed/unsupported/raise_stmt.py
def f():
    raise ValueError("error")

f()
